alteracao na pagina de contato

--- a/contato.html
+++ b/contato.html
@@ -9,6 +9,8 @@
 <body>
 
     <h1>Contato</h1>
+
+    <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto, reprehenderit rem. Quasi incidunt qui harum eveniet quibusdam distinctio blanditiis, quae iure ipsa velit expedita ullam beatae, unde minima, temporibus nisi.</h1>
     
 </body>
 </html>
