--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
             </li>
         </ul>
     </header>
+
+    <footer>
+        Todos os direitos reservados.
+    </footer>
     
 </body>
 </html>
